--- a/portfolio.html
+++ b/portfolio.html
@@ -395,6 +395,25 @@
                         </li>
                     </ul>
                 </div>
+                <form class="sign-in-form">
+                    <label class="sign-in-footer">
+                        <span class="sign-in-label"
+                            >Zapisz się do newslettera</span
+                        >
+                        <input
+                            type="email"
+                            placeholder="E-mail"
+                            class="sign-in-email"
+                            name="email"
+                        />
+                    </label>
+                    <button type="submit" class="sign-in">
+                        Zapisz się
+                        <svg width="24" height="24" class="icon-send">
+                            <use href="./images/icons.svg#icon-icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
             </div>
         </footer>
     </body>
